--- a/manifest/deployment.yml
+++ b/manifest/deployment.yml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
       - name: doctor-patient-portal
-        image: 519852036875.dkr.ecr.us-east-2.amazonaws.com/demo-repo:85
+        image: 519852036875.dkr.ecr.us-east-2.amazonaws.com/demo-repo:replaceImageTag
         ports:
         - containerPort: 8085
 
