--- a/manifest/service.yml
+++ b/manifest/service.yml
@@ -2,13 +2,12 @@ apiVersion: v1
 kind: Service
 metadata:
   name: doctor-patient-portal
-  annotations:
-    service.beta.kubernetes.io/aws-load-balancer-internal: "true"
 spec:
-  type: LoadBalancer # Change the service type to LoadBalancer
-  ports:
-  - name: http
-    port: 80
-    targetPort: 8085
   selector:
     app: doctor-patient-portal
+  ports:
+    - protocol: TCP
+      port: 80
+      targetPort: 80
+  type: NodePort
+
