--- a/manifest/service.yml
+++ b/manifest/service.yml
@@ -9,5 +9,8 @@ spec:
     - protocol: TCP
       port: 80
       targetPort: 80
-  type: NodePort
+  externalIPs:
+    - 3.142.232.54  # Replace with your desired external IP address
+    - 18.222.20.217
+  type: ClusterIP
 
